correction contraste

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ button:hover{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-color: #364577;
 }
 h1{
     width: 70%;
